# alice

./: .gitignore  LICENSE.md
alice_web/: .gitignore  README.md  mix.exs
alice_web/config/: config.exs  dev.exs  prod.exs  test.exs
alice_web/lib/: alice_web.ex
alice_web/lib/alice_web/: conn_server.ex  conn_worker.ex  endpoint.ex
alice_web/test/controllers/: page_controller_test.exs
alice_web/test/support/: channel_case.ex  conn_case.ex
alice_web/test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
alice_web/web/: gettext.ex  router.ex  web.ex
alice_web/web/channels/: room_channel.ex  user_socket.ex
alice_web/web/controllers/: page_controller.ex
alice_web/web/static/js/: socket.js
alice_web/web/templates/layout/: app.html.eex
alice_web/web/templates/page/: index.html.eex
alice_web/web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
alicehs/: .gitignore  alicehs.cabal  stack.yaml
alicehs-prototype/: .gitignore  ChangeLog.md  README.md  createdb.sql  main.db  package.yaml  stack.yaml
alicehs-prototype/app/: Main.hs
alicehs-prototype/src/: Alice.hs
alicehs-prototype/src/Alice/: Database.hs  Utils.hs
alicehs/app/: Main.hs
alicehs/src/Alice/: App.hs  Config.hs  NameResolver.hs  SVisor.hs
alicehs/src/Alice/Common/: DB.hs  Rules.hs  Utils.hs
alicehs/src/Alice/Data/: Assoc.hs  ContextUnit.hs  Emo.hs  Form.hs  GetAssocsResult.hs  SForm.hs  Sentence.hs
alicehs/src/Alice/Messages/: AsMsg.hs  CommMsg.hs  ConsMsg.hs  ContextMsg.hs  ErrMsg.hs  RootMsg.hs
alicehs/src/Alice/Sensors/: TextSensor.hs
alicehs/src/Alice/Servers/: AsSrv.hs  CommSrv.hs  ConsSrv.hs  ContextSrv.hs  RootSrv.hs
alicehs/src/Alice/Workers/: AsWorker.hs  CommWorker.hs  Ticker.hs
alicehs2/: README.md  alicehs2.cabal  stack.yaml
alicehs2/app/: Main.hs
alicehs2/src/: Alice.hs
alicehs2/src/Alice/: Data.hs  Form.hs  Network.hs  Sensor.hs  Ticker.hs  Utils.hs
