name:                alicehs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/alicehs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Alice.App
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , stm >= 2.4
                     , json -any
                     , network-simple -any
                     , HDBC -any
                     , HDBC-sqlite3 -any
  default-language:    Haskell2010
  other-modules:       Alice.Common.DB
                       Alice.Common.Rules
                       Alice.Config
                       Alice.Data.Assoc
                       Alice.Data.ContextUnit
                       Alice.Data.Emo
                       Alice.Data.Form
                       Alice.Data.GetAssocsResult
                       Alice.Data.SForm
                       Alice.Data.Sentence
                       Alice.Messages.AsMsg
                       Alice.Messages.CommMsg
                       Alice.Messages.ConsMsg
                       Alice.Messages.ContextMsg
                       Alice.Messages.RootMsg
                       Alice.SVisor
                       Alice.Sensors.TextSensor
                       Alice.Servers.AsSrv
                       Alice.Servers.CommSrv
                       Alice.Servers.ConsSrv
                       Alice.Servers.ContextSrv
                       Alice.Servers.RootSrv
                       Alice.Workers.AsWorker
                       Alice.Workers.CommWorker
                       Alice.Workers.Ticker

executable alicehs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alicehs
  default-language:    Haskell2010

test-suite alicehs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alicehs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/alicehs
